--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,253 @@
+@ARTICLE{Munoz2011,
+   author = {{Mu{\~n}oz-Cuartas}, J.~C. and {Macci{\`o}}, A.~V. and {Gottl{\"o}ber}, S. and 
+	{Dutton}, A.~A.},
+    title = "{The redshift evolution of {$\Lambda$} cold dark matter halo parameters: concentration, spin and shape}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1007.0438},
+ primaryClass = "astro-ph.CO",
+ keywords = {gravitation, methods: numerical, galaxies: haloes, cosmology: theory, dark matter},
+     year = 2011,
+    month = feb,
+   volume = 411,
+    pages = {584-594},
+      doi = {10.1111/j.1365-2966.2010.17704.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.411..584M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Duffy2008,
+   author = {{Duffy}, A.~R. and {Schaye}, J. and {Kay}, S.~T. and {Dalla Vecchia}, C.
+	},
+    title = "{Dark matter halo concentrations in the Wilkinson Microwave Anisotropy Probe year 5 cosmology}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0804.2486},
+ keywords = {methods: N-body simulations, galaxies: clusters: general, galaxies: haloes, cosmological parameters, cosmology: theory, dark matter},
+     year = 2008,
+    month = oct,
+   volume = 390,
+    pages = {L64-L68},
+      doi = {10.1111/j.1745-3933.2008.00537.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.390L..64D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Neto2007,
+   author = {{Neto}, A.~F. and {Gao}, L. and {Bett}, P. and {Cole}, S. and 
+	{Navarro}, J.~F. and {Frenk}, C.~S. and {White}, S.~D.~M. and 
+	{Springel}, V. and {Jenkins}, A.},
+    title = "{The statistics of {$\Lambda$} CDM halo concentrations}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0706.2919},
+ keywords = {methods: numerical, galaxies: haloes, cosmology: theory, dark matter},
+     year = 2007,
+    month = nov,
+   volume = 381,
+    pages = {1450-1462},
+      doi = {10.1111/j.1365-2966.2007.12381.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.381.1450N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Prada2012,
+   author = {{Prada}, F. and {Klypin}, A.~A. and {Cuesta}, A.~J. and {Betancort-Rijo}, J.~E. and 
+	{Primack}, J.},
+    title = "{Halo concentrations in the standard {$\Lambda$} cold dark matter cosmology}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1104.5130},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: haloes, cosmology: theory, dark matter},
+     year = 2012,
+    month = jul,
+   volume = 423,
+    pages = {3018-3030},
+      doi = {10.1111/j.1365-2966.2012.21007.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.423.3018P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Foex2014,
+   author = {{Fo{\"e}x}, G. and {Motta}, V. and {Jullo}, E. and {Limousin}, M. and 
+	{Verdugo}, T.},
+    title = "{SARCS strong-lensing galaxy groups. II. Mass-concentration relation and strong-lensing bias}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1409.5905},
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, galaxies:, groups: general, dark matter},
+     year = 2014,
+    month = dec,
+   volume = 572,
+      eid = {A19},
+    pages = {A19},
+      doi = {10.1051/0004-6361/201424706},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...572A..19F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Mandelbaum2008,
+   author = {{Mandelbaum}, R. and {Seljak}, U. and {Hirata}, C.~M.},
+    title = "{A halo mass{\mdash}concentration relation from weak lensing}",
+  journal = {\jcap},
+archivePrefix = "arXiv",
+   eprint = {0805.2552},
+     year = 2008,
+    month = aug,
+   volume = 8,
+      eid = {006},
+    pages = {6},
+      doi = {10.1088/1475-7516/2008/08/006},
+   adsurl = {http://adsabs.harvard.edu/abs/2008JCAP...08..006M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Giocoli2014,
+   author = {{Giocoli}, C. and {Meneghetti}, M. and {Metcalf}, R.~B. and 
+	{Ettori}, S. and {Moscardini}, L.},
+    title = "{Mass and concentration estimates from weak and strong gravitational lensing: a systematic study}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1311.1205},
+ primaryClass = "astro-ph.CO",
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, methods: analytical, galaxies: haloes, cosmology: theory, dark matter},
+     year = 2014,
+    month = may,
+   volume = 440,
+    pages = {1899-1915},
+      doi = {10.1093/mnras/stu303},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.440.1899G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Comerford2007,
+   author = {{Comerford}, J.~M. and {Natarajan}, P.},
+    title = "{The observed concentration-mass relation for galaxy clusters}",
+  journal = {\mnras},
+   eprint = {astro-ph/0703126},
+ keywords = {gravitational lensing, galaxies: clusters: general, cosmology: observations, dark matter},
+     year = 2007,
+    month = jul,
+   volume = 379,
+    pages = {190-200},
+      doi = {10.1111/j.1365-2966.2007.11934.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.379..190C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Buote2007,
+   author = {{Buote}, D.~A. and {Gastaldello}, F. and {Humphrey}, P.~J. and 
+	{Zappacosta}, L. and {Bullock}, J.~S. and {Brighenti}, F. and 
+	{Mathews}, W.~G.},
+    title = "{The X-Ray Concentration-Virial Mass Relation}",
+  journal = {\apj},
+   eprint = {astro-ph/0610135},
+ keywords = {Cosmology: Cosmological Parameters, Cosmology: Observations, Cosmology: Dark Matter, X-Rays: Galaxies, X-Rays: Galaxies: Clusters},
+     year = 2007,
+    month = jul,
+   volume = 664,
+    pages = {123-134},
+      doi = {10.1086/518684},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...664..123B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Shan2015,
+   author = {{Shan}, H. and {Kneib}, J.-P. and {Li}, R. and {Comparat}, J. and 
+	{Erben}, T. and {Makler}, M. and {Moraes}, B. and {Van Waerbeke}, L. and 
+	{Taylor}, J.~E. and {Charbonnier}, A.},
+    title = "{The Mass-Concentration Relation and the Stellar-to-Halo Mass Ratio in the CFHT Stripe 82 Survey}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.00313},
+ keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150200313S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Einasto1965,
+   author = {{Einasto}, J.},
+    title = "{On the Construction of a Composite Model for the Galaxy and on the Determination of the System of Galactic Parameters}",
+  journal = {Trudy Astrofizicheskogo Instituta Alma-Ata},
+     year = 1965,
+   volume = 5,
+    pages = {87-100},
+   adsurl = {http://adsabs.harvard.edu/abs/1965TrAlm...5...87E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Navarro2010,
+   author = {{Navarro}, J.~F. and {Ludlow}, A. and {Springel}, V. and {Wang}, J. and 
+	{Vogelsberger}, M. and {White}, S.~D.~M. and {Jenkins}, A. and 
+	{Frenk}, C.~S. and {Helmi}, A.},
+    title = "{The diversity and similarity of simulated cold dark matter haloes}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0810.1522},
+ keywords = {methods: numerical, dark matter},
+     year = 2010,
+    month = feb,
+   volume = 402,
+    pages = {21-34},
+      doi = {10.1111/j.1365-2966.2009.15878.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2010MNRAS.402...21N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Taylor2001,
+   author = {{Taylor}, J.~E. and {Navarro}, J.~F.},
+    title = "{The Phase-Space Density Profiles of Cold Dark Matter Halos}",
+  journal = {\apj},
+   eprint = {astro-ph/0104002},
+ keywords = {Cosmology: Theory, Cosmology: Dark Matter, Galaxies: Formation, Galaxies: Structure, Methods: Analytical, Methods: Numerical},
+     year = 2001,
+    month = dec,
+   volume = 563,
+    pages = {483-488},
+      doi = {10.1086/324031},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...563..483T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Springel2005,
+   author = {{Springel}, V. and {White}, S.~D.~M. and {Jenkins}, A. and {Frenk}, C.~S. and 
+	{Yoshida}, N. and {Gao}, L. and {Navarro}, J. and {Thacker}, R. and 
+	{Croton}, D. and {Helly}, J. and {Peacock}, J.~A. and {Cole}, S. and 
+	{Thomas}, P. and {Couchman}, H. and {Evrard}, A. and {Colberg}, J. and 
+	{Pearce}, F.},
+    title = "{Simulations of the formation, evolution and clustering of galaxies and quasars}",
+  journal = {\nat},
+   eprint = {astro-ph/0504097},
+     year = 2005,
+    month = jun,
+   volume = 435,
+    pages = {629-636},
+      doi = {10.1038/nature03597},
+   adsurl = {http://adsabs.harvard.edu/abs/2005Natur.435..629S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Klypin2014,
    author = {{Klypin}, A. and {Yepes}, G. and {Gottlober}, S. and {Prada}, F. and 
 	{Hess}, S.},
