new references added to the intro

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -32,6 +32,7 @@
 \newcommand{\apjl}{ApJL}
 \newcommand{\aj}{AJ}
 \newcommand{\mnras}{MNRAS}
+\newcommand{\jcap}{JCAP}
 \newcommand{\mnrassub}{MNRAS accepted}
 \newcommand{\aap}{A\&A}
 \newcommand{\aaps}{A\&AS}
@@ -113,29 +114,42 @@ Universe is dominated by dark matter which behaves as a collisionless
 fluid under the influence of gravity. In the last three decades
 numerical experiments have made possible the simulation of dark matter
 dominated universes, yielding valuable insights on the large scale
-structure formation process as depicted in observations.
+structure formation process as depicted in observations
+\citep{Springel2005,2011ApJ...740..102K}. 
 
 One of the most striking results of these simulations is that dark
 matter clumps on galactic scales follow a universal density profile
 which in a first approximation is spherical symmetric and only
-dependent on the radial coordinate. These profiles seem to be
-universal; independent of the cosmological parameters and self-similar
-for different spatial scales after an adequate re-scaling is
-app plied.
+dependent on the radial coordinate. These profiles seem to be to a
+very good approximation universal \citep{NFW,Taylor2001}; independent
+of the cosmological parameters and self-similar for different spatial
+scales after an adequate re-scaling is applied. 
 
 One the most common parameterization of this density is known as the
 Navarro-Frenk-White (NFW) profile \citep{NFW}. This profile is a
 double power law in radius, where the transition between the two
 happens at the so-called scale radius $r_s$. The ratio between the
 scale radius and the virial radius of the halo $R_v$ is known as the
-concentration $c=R_V/r_s$, a quantity that has been found to be
+concentration $c=R_v/r_s$, a quantity that has been found to be
 correlated with the halo mass.
+
+In spite of the fact that high resolution simulations of
+Milky Way sized dark matter halos \citep{Navarro2010} show that the
+universality property is not  perfect and that a better fitting
+parameterization to the radial density profile is provided by the
+Einasto profile \citep{Einasto1965}, the NFW and its concentration
+have become a standard and useful way to describe the structure of
+dark matter halos.
+
 
 The relationship between halo mass and concentration is in principle
 accessible to observations and provides a potential test of LCDM on
-galactic scales. With this promise a great deal of effort has been
-invested in calibrating this relationship with simulations but also
-finding the best possible way to constraint it with observations.
+galactic scales. 
+With this promise a great deal of effort has been
+invested in calibrating this relationship with simulations
+\citep{Neto2007,Duffy2008,Munoz2011,Prada2012,Ludlow2014} but also
+finding the best possible way to constraint it with observations
+\citep{Buote2007,Comerford2007,Mandelbaum2008,Giocoli2014,Foex2014,Shan2015}.
 
 From the computational point of view there are two main methods to
 estimate the concentration parameter of a dark matter halo in a N-body
